Fix Header Alignment

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@ html, body {
   margin: 0 1.5em;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 10%;
 }
 
